# TicTacToe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  exe  main.cpp
cmake/: CPM.cmake
inc/: AIPlayer.h  Board.h  Game.h  HumanPlayer.h  KeyToMethod.h  Menu.h  Player.h  Selector.h  Token.h
include/: AIPlayer.hpp  Board.hpp  Game.hpp  HumanPlayer.hpp  KeyToMethod.hpp  Menu.hpp  Player.hpp  Token.hpp
src/: AIPlayer.cpp  AIPlayer.cxx  Board.cpp  Board.cxx  CMakeLists.txt  Game.cpp  HumanPlayer.cpp  KeyToMethod.cpp  Menu.cpp  Player.cpp  Player.cxx  Selector.cpp  Token.cpp  Token.cxx  main.cpp  main.cxx
